--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.4.1",
     "zustand": "^5.0.3"
   },
