--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-masonry-css": "^1.0.16",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
